--- a/frontend/src/components/Cart/Shipping.css
+++ b/frontend/src/components/Cart/Shipping.css
@@ -1,21 +1,20 @@
 .shippingContainer {
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     max-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(231, 231, 231);
     position: fixed;
-    top: 0;
-    left: 0;
+    background-color: rgba(231, 231, 231);
+
 }
 
 .shippingBox {
 
     background-color: white;
     width: 50vw;
-    min-height: 70vh;
+    height: 88vh;
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -41,8 +40,9 @@
     flex-direction: column;
     align-items: center;
     margin: auto;
-    padding: 2vmax 2vmax;
-    gap: 4vmax;
+    justify-content: space-evenly;
+    padding: 1vmax 2vmax;
+    /* gap: 2vmax; */
     height: 80%;
     transition: all 500ms;
 }
@@ -66,7 +66,7 @@
 
 .shippingForm>div>input, .shippingForm>div>select {
     padding: 1vmax 4vmax;
-    padding-right: 0;
+    padding-right: 1vmax;
     width: 100%;
     box-sizing: border-box;
     border: 1px solid rgba(0, 0, 0, 0.275);
