--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,3 +17,11 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.greenColor {
+    color: rgb(15, 224, 15) !important;
+}
+
+.redColor {
+    color: red !important;
+}
