--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -56,7 +56,7 @@
     padding: 1vmax 0;
 }
 
-.detailsBlock-2>span {
+.detailsBlock-2-span {
     color: rgba(54, 54, 54, 0.55);
     font: 200 .8vmax cursive;
 }
@@ -185,6 +185,18 @@
 
 
 /* //Review Css */
+.submitDialog {
+    display: flex;
+    flex-direction: column;
+}
+
+.submitDialogTextArea {
+    border: 1px solid rgba(0, 0, 0, .21);
+    margin: 1vmax 0;
+    outline: none;
+    padding: 1rem;
+    font: 300 1rem "Roboto";
+}
 
 .reviewHeading {
     counter-reset: #000000;
@@ -198,10 +210,12 @@
 }
 
 .reviews {
+
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     overflow: auto;
+
 }
 
 .reviewCard {
@@ -228,7 +242,7 @@
 
 }
 
-.reviewCard>span {
+.reviewCardComment {
     color: rgba(0, 0, 0, .446);
     font: 300 .8vmax cursive;
 
@@ -325,5 +339,13 @@
         padding: 1.2vmax;
         width: 20vmax;
         margin: 3vmax 0;
+    }
+
+    .reviewCard>p {
+        font: 600 3vw "Roboto";
+    }
+
+    .reviewCardComment {
+        font: 600 4vw "Roboto";
     }
 }
