--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,10 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 /* //Firefox */
 input[type=number] {
     -moz-appearance: textfield;
