--- a/frontend/src/components/layout/Footer/footer.css
+++ b/frontend/src/components/layout/Footer/footer.css
@@ -1,102 +1,143 @@
 footer {
-    margin-top: 10vmax;
+    margin-top: 5vmax;
+    border-top: 2px solid rgba(169, 169, 169, 0.45);
     padding: 2vmax;
-    background-color: rgb(34, 33, 33);
-    color: white;
-    display: flex;
-    align-items: center;
-}
-
-.leftFooter {
-    width: 20%;
+    padding-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
-.leftFooter>h4 {
-    font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
-}
-
-
-.leftFooter>p {
-    text-align: center;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
-}
-
-.leftFooter>svg {
+.h-container-1 {
     display: flex;
+    gap: 4vmax;
+    flex-wrap: wrap;
+    margin-bottom: 1vmax;
+}
+
+
+.v-container {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+
+}
+
+.h-stack-1 {
+    padding: .5vmax;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 30vmax;
+
+
+}
+
+.h-stack-2 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 15vmax;
+
+
 }
 
 img {
-    width: 10rem;
-    margin-bottom: 0;
+    padding: 1vmax 0;
+    width: 10vmax;
 }
 
-
-.appStore {
-    margin-top: 0;
-    width: 10rem;
-    height: 7.5rem;
-
+p {
+    color: rgb(121, 118, 118);
 }
 
-.midFooter {
-    width: 60%;
-    text-align: center;
-}
-
-.midFooter>h1 {
-    font-size: 2.5vmax;
-    color: crimson;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    margin: .2rem 0;
-}
-
-.rightFooter {
+.p-items {
+    cursor: pointer;
+    width: 5vmax;
+    padding: 1.5vmax;
     display: flex;
-    flex-direction: column;
-    gap: .2rem;
+
     align-items: center;
+    justify-content: center;
+    border-radius: .5vmax;
+    border: 1px solid darkgray;
+}
+
+.h-stack-2 {
+    width: 30vmax;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+}
+
+.p-list-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1vmax;
+}
+
+.li-heading {
+    padding: .5vmax;
+    font-size: 1.3vmax;
+    font-weight: 500;
+}
+
+.li-items {
+    padding: .5vmax;
+    color: rgba(70, 70, 70, 0.9);
+    font-size: 1vmax;
+    transition: all 400ms linear;
+    cursor: pointer;
+}
+
+.li-items:hover {
+
+    transform: translateX(.5vmax);
+    scale: 1.05;
+    color: tomato;
+}
+
+
+.h-container-2 {
+    /* margin: 2vmax; */
+    width: 100%;
+    border-top: 2px solid rgba(169, 169, 169, 0.45);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.v-container-2 {
+    padding: 1.5vmax;
+    width: 33%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
 
 }
 
-.rightFooter>h4 {
-    font-size: 1.4vmax;
+.v-container-2 div:hover {
+    transition: all 300ms linear;
+    color: tomato;
+    cursor: pointer;
 }
 
-.rightFooter>a:hover {
-    color: coral;
-    transition: 500ms ease-in
-}
 
-@media screen and (max-width:900px) {
-    footer {
-        display: flex;
-        flex-direction: column;
+
+@media screen and (max-width:768px) {
+
+    footer, .li-items {
+        font-size: 2.5vw;
     }
 
-    .leftFooter {
-        width: 80%;
+    .li-heading {
+        font-size: 2.8vw;
     }
 
-    .midFooter {
-        width: 80%;
+    .h-container-2 {
+        font-size: 1vmax;
     }
-
-    .rightFooter a {
-        width: 80%;
-        font-size: 1.6vmax;
-    }
-
-    .rightFooter>h4 {
-        margin-top: 2rem;
-        font-size: 2.5vmax;
-    }
-
 }
