--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -163,6 +163,11 @@
 
 
 @media screen and (max-width:1024px) {
+    .product-container-wrapper {
+
+        width: 95%;
+    }
+
     .banner {
         position: relative;
         height: 45vw;
