--- a/frontend/src/components/Product/Products.css
+++ b/frontend/src/components/Product/Products.css
@@ -11,9 +11,17 @@
 .products {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 5vmax;
+    gap: 2vmax;
     justify-content: center;
     min-height: 30vh;
+}
+
+.products-container {
+    width: 90%;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 1vmax;
+    margin: auto;
 
 }
 
@@ -68,8 +76,15 @@
     color: white;
 }
 
+.filter-options {
+    width: 10vmax;
+    height: 20vmax;
+    background-color: white;
+}
+
 .filterBox {
     width: 10vmax;
+    background-color: white;
     position: absolute;
     top: 10vmax;
     left: 4vmax;
@@ -106,7 +121,17 @@
     padding: 1vmax;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:900px) {
+    .products-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .filter-options {
+        width: 100%;
+        height: auto;
+    }
+
     .filterBox {
         width: 20vmax;
         position: static;
