--- a/frontend/src/components/Utils/Brands.css
+++ b/frontend/src/components/Utils/Brands.css
@@ -1,11 +1,8 @@
 .brand-container {
     position: relative;
     z-index: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    padding: 20px;
+    padding: 0 1rem;
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
@@ -25,6 +22,12 @@
     background-color: #f5f6f6;
     -webkit-transition: all 200ms ease;
     transition: all 200ms ease;
+    width: 20vmax;
+}
+
+.brand-container:hover {
+    background-color: rgb(214, 208, 208);
+    cursor: pointer;
 }
 
 .brand-thumbnail-wrap {
@@ -33,10 +36,15 @@
 }
 
 .deal-image {
+    width: 5rem;
+    height: 5rem;
     border-radius: 10px;
 }
 
 .brand-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     margin-top: 0px;
     margin-bottom: 13px;
     font-family: Inter, sans-serif;
@@ -45,9 +53,23 @@
     font-weight: 600;
 }
 
+.brand-title {
+    font-size: 1.2vmax;
+    margin-bottom: .5vmax;
+}
+
 .delivery-time {
     margin-bottom: 0px;
     font-size: 13px;
     line-height: 13px;
     font-weight: 500;
+    font-size: medium;
+    color: rgb(160, 83, 83);
+}
+
+@media screen and (max-width:768px) {
+    .brand-container {
+        width: 90%;
+    }
+
 }
