--- a/frontend/src/components/Utils/CategoryCard.css
+++ b/frontend/src/components/Utils/CategoryCard.css
@@ -69,3 +69,14 @@
         font-size: 18px;
     }
 }
+
+@media screen and (max-width:500px) {
+    .cat-card {
+        width: 24rem;
+        height: 25rem;
+    }
+
+    .category-title {
+        font-size: 18px;
+    }
+}
