--- a/frontend/src/components/layout/Footer/footer.css
+++ b/frontend/src/components/layout/Footer/footer.css
@@ -56,13 +56,19 @@ p {
 .p-items {
     cursor: pointer;
     width: 5vmax;
-    padding: 1.5vmax;
+    padding: 1vmax;
     display: flex;
 
     align-items: center;
     justify-content: center;
     border-radius: .5vmax;
-    border: 1px solid darkgray;
+    transition: all 300ms ease-in;
+
+}
+
+.p-items:hover {
+    color: tomato;
+
 }
 
 .h-stack-2 {
