--- a/frontend/src/components/layout/Loader/Loader.css
+++ b/frontend/src/components/layout/Loader/Loader.css
@@ -1,24 +1,13 @@
 .loading {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
-    background-color: white;
-    display: grid;
-    place-items: center;
-    max-width: 100%;
+    width: 100cw;
 }
 
 .loading>div {
-    width: 10vmax;
-    height: 10vmax;
+    display: flex;
 
-    border-bottom: 5px solid rgb(0, 0, 0, 0.6);
-    border-radius: 50%;
-
-    animation: loadingRotate 800ms linear infinite;
-}
-
-@keyframes loadingRotate {
-    to {
-        transform: rotateZ(-360deg);
-    }
 }
